include_directories(
	.
	./hl2
	./hl2/elements
	./game_controls
	
	../server
	../shared
	../shared/hl2
	../shared/episodic
	
	../../public
	../../common
	../../public
	../../public/tier0
	../../public/tier1
	
	../../vgui2/include
	../../vgui2/controls
)

link_directories(
	../../lib/public
)

# Remove later
link_directories(
	../../lib/public/2013
)

if(MSVC)
	# D'oh! Wtf, Valve?
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO /NODEFAULTLIB:libc /NODEFAULTLIB:libcd")
	set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:libcmt")
	set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /NODEFAULTLIB:libcmtd /OPT:ICF /OPT:REF")
	set(CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO} /NODEFAULTLIB:libcmtd /OPT:ICF /OPT:REF")
endif()


### Need to figure out what is realy needed

add_definitions(
	-DCLIENT_DLL
	-DHL2_CLIENT_DLL
	-DHL2_EPISODIC
	-DVECTOR
	-DPROTECTED_THINGS_ENABLE
	-DCOMPILER_MSVC32
	-DVERSION_SAFE_STEAM_API_INTERFACES
	-DRAD_TELEMETRY_DISABLED
	-DNO_STRING_T
)

if(WIN32)
	add_definitions(
		-D_USRDLL
		-D_ITERATOR_DEBUG_LEVEL=0
	)
endif()

# WIN32
# _WIN32
# NDEBUG
# _WINDOWS
# _USRDLL
# _CRT_SECURE_NO_DEPRECATE
# _CRT_NONSTDC_NO_DEPRECATE
# DLLNAME=client
# RAD_TELEMETRY_DISABLED
# COMPILER_MSVC32
# BINK_VIDEO
# AVI_VIDEO
# WMV_VIDEO
# NO_STRING_T
# VECTOR
# VERSION_SAFE_STEAM_API_INTERFACES
# PROTECTED_THINGS_ENABLE
# strncpy=use_Q_strncpy_instead
# _snprintf=use_Q_snprintf_instead
# ENABLE_CHROMEHTMLWINDOW
# fopen=dont_use_fopen
# HL2_CLIENT_DLL
# HL2_EPISODIC
# VPCGAMECAPS=VALVE
# PROJECTDIR=D:/dev/games/rel/singleplayer/src/game/client
# VPCGAME=valve

# ../../lib/public/bitmap.lib
# ../../lib/public/choreoobjects.lib
# ../../lib/public/dmxloader.lib
# ../../lib/public/mathlib.lib
# ../../lib/public/matsys_controls.lib
# ../../lib/public/particles.lib
# ../../lib/public/steam_api.lib
# ../../lib/public/tier0.lib
# ../../lib/public/tier2.lib
# ../../lib/public/tier3.lib
# ../../lib/public/vgui_controls.lib
# ../../lib/public/vstdlib.lib
# ../../lib/public/vtf.lib

# Blamod variables framework
set(BLAMOD_FW_FILES
	../blamod/blamodvar.cpp
	../blamod/blamodvar.h
)
source_group(Blamod FILES ${BLAMOD_FW_FILES})

add_library(client SHARED

	${BLAMOD_FW_FILES}

    ../shared/activitylist.h
    ../shared/ai_activity.h
    ../shared/ai_debug_shared.h
    ../shared/ammodef.h
    ../shared/animation.h
    ../shared/apparent_velocity_helper.h
    ../shared/base_playeranimstate.h
    ../shared/baseentity_shared.h
    ../shared/basegrenade_shared.h
    ../shared/hl2/basehlcombatweapon_shared.h
    ../shared/baseparticleentity.h
    ../shared/baseplayer_shared.h
    ../shared/baseviewmodel_shared.h
    ../shared/beam_flags.h
    ../shared/beam_shared.h
    ../shared/choreoactor.h
    ../shared/choreochannel.h
    ../shared/choreoevent.h
    ../shared/choreoscene.h
    ../shared/collisionproperty.h
    ../shared/death_pose.h
    ../shared/decals.h
    ../shared/effect_color_tables.h
    ../shared/effect_dispatch_data.h
    ../shared/ehandle.h
    ../shared/entitydatainstantiator.h
    ../shared/entitylist_base.h
    ../shared/entityparticletrail_shared.h
    ../shared/env_detail_controller.h
    ../shared/env_wind_shared.h
    ../shared/eventlist.h
    ../shared/func_dust_shared.h
    ../shared/func_ladder.h
    ../shared/gameeventdefs.h
    ../shared/gamemovement.h
    ../shared/gamerules.h
    ../shared/gamerules_register.h
    ../shared/gamestats.h
    ../shared/gamestringpool.h
    ../shared/gamevars_shared.h
    ../shared/groundlink.h
    ../shared/hl2/hl2_player_shared.h
    ../shared/hl2/hl_movedata.h
    ../shared/ichoreoeventcallback.h
    ../shared/IEffects.h
    ../shared/igamemovement.h
    ../shared/igamesystem.h
    ../shared/imovehelper.h
    ../shared/in_buttons.h
    ../shared/interval.h
    ../shared/iplayeranimstate.h
    ../shared/ipredictionsystem.h
    ../shared/itempents.h
    ../shared/IVehicle.h
    ../shared/mapdata_shared.h
    ../shared/mapentities_shared.h
    ../shared/movevars_shared.h
    ../shared/mp_shareddefs.h
    ../shared/multiplay_gamerules.h
    ../shared/npcevent.h
    ../shared/obstacle_pushaway.h
    ../shared/physics_saverestore.h
    ../shared/physics_shared.h
    ../shared/playernet_vars.h
    ../shared/point_posecontroller.h
    ../shared/positionwatcher.h
    ../shared/precache_register.h
    ../shared/precipitation_shared.h
    ../shared/predictable_entity.h
    ../shared/predictableid.h
    ../shared/predictioncopy.h
    ../shared/ragdoll_shared.h
    ../shared/rope_helpers.h
    ../shared/saverestore.h
    ../shared/saverestore_bitstring.h
    ../shared/saverestore_utlclass.h
    ../shared/saverestore_utlsymbol.h
    ../shared/saverestore_utlvector.h
    ../shared/sceneentity_shared.h
    ../shared/scriptevent.h
    ../shared/sequence_Transitioner.h
    ../shared/shared_classnames.h
    ../shared/shareddefs.h
    ../shared/sharedInterface.h
    ../shared/sheetsimulator.h
    ../shared/shot_manipulator.h
    ../shared/simtimer.h
    ../shared/singleplay_gamerules.h
    ../shared/smoke_fog_overlay_shared.h
    ../shared/solidsetdefaults.h
    ../shared/soundenvelope.h
    ../shared/Sprite.h
    ../shared/SpriteTrail.h
    ../shared/sun_shared.h
    ../shared/takedamageinfo.h
    ../shared/teamplay_gamerules.h
    ../shared/teamplayroundbased_gamerules.h
    ../shared/tempentity.h
    ../shared/touchlink.h
    ../shared/usercmd.h
    ../shared/usermessages.h
    ../shared/util_shared.h
    ../shared/vehicle_choreo_generic_shared.h
    ../shared/vehicle_viewblend_shared.h
    ../shared/vgui_defaultinputsignal.h
    ../shared/viewport_panel_names.h
    ../shared/voice_banmgr.h
    ../shared/voice_common.h
    ../shared/voice_gamemgr.h
    ../shared/voice_status.h
    ../shared/vphysics_sound.h
    ../shared/weapon_ifmsteadycam.h
    ../shared/weapon_parse.h
    ../shared/weapon_proficiency.h
    game_controls/baseviewport.h
    game_controls/clientscoreboarddialog.h
    game_controls/commandmenu.h
    game_controls/IconPanel.h
    game_controls/imagemouseoverbutton.h
    game_controls/intromenu.h
    game_controls/mapoverview.h
    game_controls/mouseoverhtmlbutton.h
    game_controls/mouseoverpanelbutton.h
    game_controls/spectatorgui.h
    game_controls/teammenu.h
    game_controls/vguitextwindow.h
    animationlayer.h
    baseanimatedtextureproxy.h
    baseclientrendertargets.h
    basepresence.h
    beamdraw.h
    bone_merge_cache.h
    c_ai_basenpc.h
    c_baseanimating.h
    c_baseanimatingoverlay.h
    c_basecombatcharacter.h
    c_basecombatweapon.h
    c_basedoor.h
    c_baseentity.h
    c_baseflex.h
    c_baseplayer.h
    c_basetempentity.h
    c_baseviewmodel.h
    c_breakableprop.h
    c_effects.h
    c_entitydissolve.h
    c_env_fog_controller.h
    c_fire_smoke.h
    c_func_dust.h
    c_func_reflective_glass.h
    c_gib.h
    c_impact_effects.h
    c_physbox.h
    c_physicsprop.h
    c_pixel_visibility.h
    c_playerlocaldata.h
    c_playerresource.h
    c_point_camera.h
    c_prop_vehicle.h
    c_recipientfilter.h
    c_rope.h
    c_rumble.h
    c_sceneentity.h
    c_smoke_trail.h
    c_soundscape.h
    c_sprite.h
    c_sun.h
    c_te_basebeam.h
    c_te_effect_dispatch.h
    c_te_legacytempents.h
    c_te_particlesystem.h
    c_team.h
    c_tesla.h
    c_tracer.h
    c_user_message_register.h
    c_vehicle_jeep.h
    c_vguiscreen.h
    c_weapon__stubs.h
    c_world.h
    cbase.h
    cdll_client_int.h
    cdll_util.h
    cl_animevent.h
    cl_mat_stub.h
    client_factorylist.h
    client_thinklist.h
    clienteffectprecachesystem.h
    cliententitylist.h
    clientleafsystem.h
    clientmode.h
    clientmode_shared.h
    clientsideeffects.h
    colorcorrectionmgr.h
    detailobjectsystem.h
    enginesprite.h
    flashlighteffect.h
    fontabc.h
    functionproxy.h
    fx.h
    fx_blood.h
    fx_discreetline.h
    fx_envelope.h
    fx_explosion.h
    fx_fleck.h
    fx_impact.h
    fx_interpvalue.h
    fx_line.h
    fx_quad.h
    fx_sparks.h
    fx_staticline.h
    fx_trail.h
    fx_water.h
    ../shared/GameEventListener.h
    glow_outline_effect.h
    glow_overlay.h
    ../shared/hintmessage.h
    ../shared/hintsystem.h
    history_resource.h
    hl2/c_prop_gravity_ball.h
    hltvcamera.h
    hud.h
    hud_basechat.h
    hud_basetimer.h
    hud_bitmapnumericdisplay.h
    hud_chat.h
    hud_closecaption.h
    hud_crosshair.h
    hud_element_helper.h
    hud_lcd.h
    hud_macros.h
    hud_numericdisplay.h
    hud_pdump.h
    hud_vehicle.h
    hudelement.h
    hudtexturehandle.h
    iclassmap.h
    icliententityinternal.h
    iclientmode.h
    iclientshadowmgr.h
    iclientvehicle.h
    iconsole.h
    idebugoverlaypanel.h
    ifpspanel.h
    ../shared/econ/ihasowner.h
    ihudlcd.h
    iinput.h
    iloadingdisc.h
    imessagechars.h
    in_main.h
    inetgraphpanel.h
    initializer.h
    input.h
    interpolatedvar.h
    ipresence.h
    iprofiling.h
    itextmessage.h
    ivieweffects.h
    iviewrender.h
    iviewrender_beams.h
    ivmodemanager.h
    kbutton.h
    ../../common/language.h
    lerp_functions.h
    menu.h
    movehelper_client.h
    mumble.h
    networkstringtable_clientdll.h
    panelmetaclassmgr.h
    particle_collision.h
    particle_iterators.h
    particle_litsmokeemitter.h
    particle_prototype.h
    particle_simple3d.h
    particle_util.h
    particledraw.h
    particlemgr.h
    particles_attractor.h
    particles_ez.h
    particles_localspace.h
    particles_new.h
    particles_simple.h
    particlesphererenderer.h
    perfvisualbenchmark.h
    physics.h
    physpropclientside.h
    playerandobjectenumerator.h
    playerenumerator.h
    playerspawncache.h
    prediction.h
    prediction_private.h
    proxyentity.h
    ragdoll.h
    ragdollexplosionenumerator.h
    recvproxy.h
    rendertexture.h
    ScreenSpaceEffects.h
    simple_keys.h
    smoke_fog_overlay.h
    splinepatch.h
    ../../public/steam/steam_api.h
    TeamBitmapImage.h
    tempent.h
    text_message.h
    timedevent.h
    toggletextureproxy.h
    vgui_basepanel.h
    vgui_bitmapbutton.h
    vgui_bitmapimage.h
    vgui_bitmappanel.h
    vgui_entityimagepanel.h
    vgui_entitypanel.h
    vgui_grid.h
    vgui_helpers.h
    vgui_imagehealthpanel.h
    vgui_int.h
    vgui_schemevisualizer.h
    vgui_video.h
    vgui_video_player.h
    vguicenterprint.h
    view.h
    view_scene.h
    viewangleanim.h
    ViewConeImage.h
    viewrender.h
    weapon_selection.h
    weapons_resource.h
    mp3player.h
    ../../public/mathlib/amd3dx.h
    ../../public/vgui_controls/AnimationController.h
    ../../public/basehandle.h
    ../../public/tier0/basetypes.h
    ../../public/tier1/bitbuf.h
    ../../public/bitvec.h
    ../../public/bone_accessor.h
    ../../public/bone_setup.h
    ../../public/bspfile.h
    ../../public/bspflags.h
    ../../public/bsptreedata.h
    ../../public/mathlib/bumpvects.h
    ../../public/vgui_controls/Button.h
    ../../public/cdll_int.h
    ../../public/tier1/characterset.h
    ../../public/tier1/checksum_md5.h
    ../../public/client_class.h
    ../../public/client_render_handle.h
    ../../public/client_textmessage.h
    ../../public/clientstats.h
    ../../public/cmodel.h
    ../../public/vphysics/collision_set.h
    ../../public/collisionutils.h
    ../../public/Color.h
    ../../public/vgui_controls/ComboBox.h
    ../../public/tier0/commonmacros.h
    ../../public/mathlib/compressed_light_cube.h
    ../../public/mathlib/compressed_vector.h
    ../../public/con_nprint.h
    ../../public/const.h
    ../../public/vphysics/constraints.h
    ../../public/vgui_controls/Controls.h
    ../../public/tier1/convar.h
    ../../public/coordsize.h
    ../../public/crtmemdebug.h
    ../../public/vgui/Cursor.h
    ../../public/vgui/Dar.h
    ../../public/datamap.h
    ../../public/tier0/dbg.h
    ../../public/dlight.h
    ../../public/dt_common.h
    ../../public/dt_recv.h
    ../../public/dt_send.h
    ../../public/dt_utlvector_common.h
    ../../public/dt_utlvector_recv.h
    ../../public/edict.h
    ../../public/vgui_controls/EditablePanel.h
    ../../public/tier0/fasttimer.h
    ../../public/filesystem.h
    ../../public/filesystem_helpers.h
    ../../public/tier1/fmtstr.h
    ../../public/vgui_controls/FocusNavGroup.h
    ../../public/vphysics/friction.h
    ../../public/gamebspfile.h
    ../../public/gametrace.h
    ../../public/globalvars_base.h
    ../../public/haptics/haptic_utils.h
    ../../public/vgui_controls/HTML.h
    ../../public/iachievementmgr.h
    ../../public/appframework/IAppSystem.h
    ../../public/icliententity.h
    ../../public/icliententitylist.h
    ../../public/engine/IClientLeafSystem.h
    ../../public/iclientnetworkable.h
    ../../public/vgui/IClientPanel.h
    ../../public/iclientrenderable.h
    ../../public/game/client/iclientrendertargets.h
    ../../public/iclientthinkable.h
    ../../public/iclientunknown.h
    ../../public/engine/ICollideable.h
    ../../public/tier0/icommandline.h
    ../../public/icvar.h
    ../../public/iefx.h
    ../../public/engine/IEngineSound.h
    ../../public/engine/IEngineTrace.h
    ../../public/ienginevgui.h
    ../../public/igameevents.h
    ../../public/igameresources.h
    ../../public/IGameUIFuncs.h
    ../../public/ihandleentity.h
    ../../public/haptics/ihaptics.h
    ../../public/vgui/IHTML.h
    ../../public/vgui/IImage.h
    ../../public/vgui/IInput.h
    ../../public/vgui/IInputInternal.h
    ../../public/vstdlib/IKeyValuesSystem.h
    ../../public/vgui/ILocalize.h
    ../../public/vgui_controls/Image.h
    ../../public/vgui_controls/ImageList.h
    ../../public/vgui_controls/ImagePanel.h
    ../../public/imapoverview.h
    ../../public/materialsystem/imaterial.h
    ../../public/materialsystem/imaterialproxy.h
    ../../public/materialsystem/imaterialsystem.h
    ../../public/materialsystem/imaterialsystemhardwareconfig.h
    ../../public/materialsystem/imaterialsystemstub.h
    ../../public/materialsystem/imaterialvar.h
    ../../public/VGuiMatSurface/IMatSystemSurface.h
    ../../public/materialsystem/imesh.h
    ../../public/inetchannelinfo.h
    ../../public/tier1/interface.h
    ../../public/interpolatortypes.h
    ../../public/vgui/IPanel.h
    ../../public/iprediction.h
    ../../public/irecipientfilter.h
    ../../public/isaverestore.h
    ../../public/vgui/IScheme.h
    ../../public/iscratchpad3d.h
    ../../public/iserverentity.h
    ../../public/iservernetworkable.h
    ../../public/iserverunknown.h
    ../../public/engine/ishadowmgr.h
    ../../public/SoundEmitterSystem/isoundemittersystembase.h
    ../../public/ispatialpartition.h
    ../../public/engine/IStaticPropMgr.h
    ../../public/istudiorender.h
    ../../public/vgui/ISurface.h
    ../../public/vgui/ISystem.h
    ../../public/materialsystem/itexture.h
    ../../public/engine/ivdebugoverlay.h
    ../../public/vgui/IVGui.h
    ../../public/ivguicenterprint.h
    ../../public/game/client/iviewport.h
    ../../public/engine/ivmodelinfo.h
    ../../public/engine/ivmodelrender.h
    ../../public/ivrenderview.h
    ../../public/jigglebones.h
    ../../public/vgui/KeyCode.h
    ../../public/tier1/KeyValues.h
    ../../public/tier0/l2cache.h
    ../../public/vgui_controls/Label.h
    ../../public/vgui_controls/ListPanel.h
    ../../public/mathlib/mathlib.h
    ../../public/tier0/mem.h
    ../../public/tier0/memalloc.h
    ../../public/tier0/memdbgoff.h
    ../../public/tier0/memdbgon.h
    ../../public/tier1/mempool.h
    ../../public/vgui_controls/Menu.h
    ../../public/vgui_controls/MenuItem.h
    ../../public/vgui_controls/MessageMap.h
    ../../public/model_types.h
    ../../public/vgui/MouseCode.h
    ../../public/mouthinfo.h
    ../../public/networkstringtabledefs.h
    ../../public/networkvar.h
    ../../public/vphysics/object_hash.h
    ../../public/overlaytext.h
    ../../public/vgui_controls/Panel.h
    ../../public/vgui_controls/PanelAnimationVar.h
    ../../public/vgui_controls/PanelListPanel.h
    ../../public/vgui_controls/PHandle.h
    ../../public/pixelwriter.h
    ../../public/tier0/platform.h
    ../../public/PlayerState.h
    ../../public/mathlib/polyhedron.h
    ../../public/tier1/processor_detect.h
    ../../public/tier0/protected_things.h
    ../../public/r_efx.h
    ../../public/vstdlib/random.h
    ../../public/tier1/rangecheckedvar.h
    ../../public/renamed_recvtable_compat.h
    ../../public/vgui_controls/RichText.h
    ../../public/rope_physics.h
    ../../public/rope_shared.h
    ../../public/saverestoretypes.h
    ../../public/scratchpad3d.h
    ../../public/ScratchPadUtils.h
    ../../public/vgui_controls/ScrollBar.h
    ../../public/vgui_controls/SectionedListPanel.h
    ../../public/sentence.h
    ../../public/server_class.h
    ../../public/shake.h
    ../../public/shattersurfacetypes.h
    ../../public/simple_physics.h
    ../../public/tier1/smartptr.h
    ../../public/soundchars.h
    ../../public/soundflags.h
    ../../public/soundinfo.h
    ../../public/string_t.h
    ../../public/tier1/stringpool.h
    ../../public/stringregistry.h
    ../../public/tier1/strtools.h
    ../../public/studio.h
    ../../public/surfinfo.h
    ../../public/vgui_controls/TextEntry.h
    ../../public/vgui_controls/TextImage.h
    ../../public/texture_group_names.h
    ../../public/vgui_controls/TreeView.h
    ../../public/tier1/utlbidirectionalset.h
    ../../public/tier1/utlbuffer.h
    ../../public/tier1/utldict.h
    ../../public/tier1/utlfixedmemory.h
    ../../public/tier1/utlhash.h
    ../../public/tier1/utllinkedlist.h
    ../../public/tier1/utlmap.h
    ../../public/tier1/utlmemory.h
    ../../public/tier1/utlmultilist.h
    ../../public/tier1/utlpriorityqueue.h
    ../../public/tier1/utlqueue.h
    ../../public/tier1/utlrbtree.h
    ../../public/tier1/utlstack.h
    ../../public/tier1/utlsymbol.h
    ../../public/tier1/utlvector.h
    ../../public/vallocator.h
    ../../public/vcollide.h
    ../../public/vcollide_parse.h
    ../../public/mathlib/vector.h
    ../../public/mathlib/vector2d.h
    ../../public/mathlib/vector4d.h
    ../../public/vgui/VGUI.h
    ../../public/view_shared.h
    ../../public/mathlib/vmatrix.h
    ../../public/vphysics_interface.h
    ../../public/mathlib/vplane.h
    ../../public/tier0/vprof.h
    ../../public/vstdlib/vstdlib.h
    ../../public/vtf/vtf.h
    ../../public/vgui_controls/WizardPanel.h
    ../../public/vgui_controls/WizardSubPanel.h
    ../../public/worldsize.h
    ../../public/zip_uncompressed.h
    replay/cdll_replay.h
    replay/replaycamera.h
    achievement_notification_panel.h
    ../shared/achievement_saverestore.h
    ../shared/achievementmgr.h
    ../shared/achievements_and_stats_interface.h
    ../shared/baseachievement.h
    c_props.h
    c_slideshow_display.h
    c_team_objectiveresource.h
    c_vote_controller.h
    ../shared/cam_thirdperson.h
    cdll_bounded_cvars.h
    client_virtualreality.h
    clientsteamcontext.h
    commentary_modelviewer.h
    ../shared/particle_parse.h
    ../shared/particle_property.h
    ../shared/point_bonusmaps_accessor.h
    studio_stats.h
    vgui_avatarimage.h
    viewdebug.h
    viewpostprocess.h
    game_controls/basemodel_panel.h
    game_controls/basemodelpanel.h
    hl2/c_basehelicopter.h
    hl2/c_basehlcombatweapon.h
    hl2/c_basehlplayer.h
    hl2/c_corpse.h
    hl2/c_hl2_playerlocaldata.h
    hl2/c_prop_combine_ball.h
    hl2/c_vehicle_crane.h
    ../shared/hl2/citadel_effects_shared.h
    hl2/clientmode_hlnormal.h
    ../shared/hl2/env_headcrabcanister_shared.h
    episodic/episodic_screenspaceeffects.h
    ../shared/hl2/hl2_gamerules.h
    ../shared/hl2/hl2_shareddefs.h
    ../shared/hl2/hl_gamemovement.h
    hl2/hud_radar.h
    hl2/hud_suitpower.h
    ../shared/episodic/npc_advisor_shared.h
    sixense/in_sixense.h
    sixense/in_sixense_gesture_bindings.h
    ../shared/sixense/sixense_convars_extern.h
    ../../public/tools/bonelist.h
    toolframework_client.h


    bla/hud_speedmeter.cpp
    bla/hud_timer.cpp
    hl2/c_prop_gravity_ball.cpp
    mp3player.cpp
    replay/cdll_replay.cpp
    replay/replaycamera.cpp
    achievement_notification_panel.cpp
    ../shared/achievement_saverestore.cpp
    ../shared/achievementmgr.cpp
    ../shared/achievements_hlx.cpp
    ../shared/activitylist.cpp
    alphamaterialproxy.cpp
    ../shared/ammodef.cpp
    animatedentitytextureproxy.cpp
    animatedoffsettextureproxy.cpp
    animatedtextureproxy.cpp
    AnimateSpecificTextureProxy.cpp
    ../shared/animation.cpp
    ../shared/base_playeranimstate.cpp
    ../shared/baseachievement.cpp
    baseanimatedtextureproxy.cpp
    baseclientrendertargets.cpp
    ../shared/basecombatcharacter_shared.cpp
    ../shared/basecombatweapon_shared.cpp
    ../shared/baseentity_shared.cpp
    ../shared/basegrenade_shared.cpp
    ../shared/baseparticleentity.cpp
    ../shared/baseplayer_shared.cpp
    basepresence.cpp
    ../shared/baseviewmodel_shared.cpp
    ../shared/beam_shared.cpp
    beamdraw.cpp
    ../../public/bone_accessor.cpp
    bone_merge_cache.cpp
    ../../public/bone_setup.cpp
    c_ai_basehumanoid.cpp
    c_ai_basenpc.cpp
    c_baseanimating.cpp
    c_baseanimatingoverlay.cpp
    c_basecombatcharacter.cpp
    c_basecombatweapon.cpp
    c_basedoor.cpp
    c_baseentity.cpp
    c_baseflex.cpp
    c_baseplayer.cpp
    c_baseviewmodel.cpp
    c_breakableprop.cpp
    c_colorcorrection.cpp
    c_colorcorrectionvolume.cpp
    c_dynamiclight.cpp
    c_entitydissolve.cpp
    c_entityparticletrail.cpp
    c_env_fog_controller.cpp
    c_env_particlescript.cpp
    c_env_projectedtexture.cpp
    c_env_screenoverlay.cpp
    c_env_tonemap_controller.cpp
    c_fire_smoke.cpp
    c_fish.cpp
    c_func_areaportalwindow.cpp
    c_func_breakablesurf.cpp
    c_func_conveyor.cpp
    c_func_dust.cpp
    c_func_lod.cpp
    hl2/C_Func_Monitor.cpp
    c_func_occluder.cpp
    c_func_reflective_glass.cpp
    c_func_rotating.cpp
    c_func_smokevolume.cpp
    c_func_tracktrain.cpp
    c_gib.cpp
    c_hairball.cpp
    c_info_overlay_accessor.cpp
    c_lightglow.cpp
    C_MaterialModifyControl.cpp
    c_particle_system.cpp
    c_physbox.cpp
    c_physicsprop.cpp
    c_physmagnet.cpp
    c_pixel_visibility.cpp
    c_plasma.cpp
    c_playerresource.cpp
    c_point_camera.cpp
    c_point_commentary_node.cpp
    c_props.cpp
    c_ragdoll_manager.cpp
    c_rope.cpp
    c_rumble.cpp
    c_sceneentity.cpp
    c_shadowcontrol.cpp
    c_slideshow_display.cpp
    c_soundscape.cpp
    c_spotlight_end.cpp
    c_sprite.cpp
    c_sprite_perfmonitor.cpp
    c_sun.cpp
    c_team.cpp
    c_team_objectiveresource.cpp
    c_tesla.cpp
    c_test_proxytoggle.cpp
    c_user_message_register.cpp
    c_vehicle_choreo_generic.cpp
    c_vehicle_jeep.cpp
    c_vguiscreen.cpp
    ../client/c_vote_controller.cpp
    hl2/c_waterbullet.cpp
    C_WaterLODControl.cpp
    c_world.cpp
    ../shared/cam_thirdperson.cpp
    camomaterialproxy.cpp
    cdll_bounded_cvars.cpp
    cdll_client_int.cpp
    cdll_util.cpp
    cl_mat_stub.cpp
    classmap.cpp
    ../../public/client_class.cpp
    client_factorylist.cpp
    client_thinklist.cpp
    client_virtualreality.cpp
    clienteffectprecachesystem.cpp
    cliententitylist.cpp
    clientleafsystem.cpp
    clientmode_shared.cpp
    clientshadowmgr.cpp
    clientsideeffects.cpp
    clientsideeffects_test.cpp
    clientsteamcontext.cpp
    ../shared/collisionproperty.cpp
    ../../public/collisionutils.cpp
    colorcorrectionmgr.cpp
    commentary_modelviewer.cpp
    ../../common/compiledcaptionswap.cpp
	../../public/crtmemdebug.cpp
    ../shared/death_pose.cpp
    ../shared/debugoverlay_shared.cpp
    ../shared/decals.cpp
    detailobjectsystem.cpp
    ../../public/dt_recv.cpp
    ../../public/dt_utlvector_common.cpp
	../../public/dt_utlvector_recv.cpp
    dummyproxy.cpp
    ../shared/effect_dispatch_data.cpp
    EffectsClient.cpp
    ../shared/ehandle.cpp
    ../shared/entitylist_base.cpp
    entityoriginmaterialproxy.cpp
    ../shared/EntityParticleTrail_Shared.cpp
    ../shared/env_detail_controller.cpp
    ../shared/env_wind_shared.cpp
    ../shared/eventlist.cpp
    ../../public/filesystem_helpers.cpp
    flashlighteffect.cpp
    ../shared/func_ladder.cpp
    functionproxy.cpp
    fx_blood.cpp
    fx_cube.cpp
    fx_explosion.cpp
    fx_fleck.cpp
    fx_impact.cpp
    fx_interpvalue.cpp
    fx_quad.cpp
    fx_shelleject.cpp
    fx_staticline.cpp
    fx_tracer.cpp
    fx_trail.cpp
    fx_water.cpp
    ../shared/gamemovement.cpp
    ../shared/gamerules.cpp
    ../shared/gamerules_register.cpp
    ../shared/GameStats.cpp
    ../shared/gamestringpool.cpp
    gametrace_client.cpp
    ../shared/gamevars_shared.cpp
    geiger.cpp
    glow_outline_effect.cpp
    glow_overlay.cpp
    ../../public/haptics/haptic_msgs.cpp
    ../../public/haptics/haptic_utils.cpp
    ../shared/hintmessage.cpp
    ../shared/hintsystem.cpp
    history_resource.cpp
    hltvcamera.cpp
    hud.cpp
    hud_animationinfo.cpp
    hl2/hud_autoaim.cpp
    hud_basechat.cpp
    hud_basetimer.cpp
    hud_bitmapnumericdisplay.cpp
    hud_chat.cpp
    hud_closecaption.cpp
    hud_crosshair.cpp
    hud_element_helper.cpp
    hl2/hud_filmdemo.cpp
    hl2/hud_hdrdemo.cpp
    hud_hintdisplay.cpp
    hud_lcd.cpp
    hud_msg.cpp
    hud_numericdisplay.cpp
    hud_pdump.cpp
    hud_redraw.cpp
    hud_vehicle.cpp
    hud_weapon.cpp
    ../shared/igamesystem.cpp
    in_camera.cpp
    in_joystick.cpp
    in_main.cpp
    in_mouse.cpp
    initializer.cpp
    interpolatedvar.cpp
    ../../public/interpolatortypes.cpp
	../shared/interval.cpp
    IsNPCProxy.cpp
    ../../public/jigglebones.cpp
    lampbeamproxy.cpp
    lamphaloproxy.cpp
    ../../common/language.cpp
    ../shared/mapentities_shared.cpp
    mathproxy.cpp
    matrixproxy.cpp
    ../../public/tier0/memoverride.cpp
    menu.cpp
    message.cpp
    movehelper_client.cpp
    ../shared/movevars_shared.cpp
    ../shared/mp_shareddefs.cpp
    ../shared/multiplay_gamerules.cpp
    mumble.cpp
	../../public/networkvar.cpp
    ../shared/obstacle_pushaway.cpp
    panelmetaclassmgr.cpp
    particle_collision.cpp
    particle_litsmokeemitter.cpp
    ../shared/particle_parse.cpp
    ../shared/particle_property.cpp
    particle_proxies.cpp
    particle_simple3d.cpp
    particlemgr.cpp
    particles_attractor.cpp
    particles_ez.cpp
    particles_localspace.cpp
    particles_new.cpp
    particles_simple.cpp
    ../shared/particlesystemquery.cpp
    perfvisualbenchmark.cpp
    physics.cpp
    physics_main_client.cpp
    ../shared/physics_main_shared.cpp
    ../shared/physics_saverestore.cpp
    ../shared/physics_shared.cpp
    physpropclientside.cpp
    playerandobjectenumerator.cpp
    playerspawncache.cpp
    ../shared/point_bonusmaps_accessor.cpp
    ../shared/point_posecontroller.cpp
    ../../public/posedebugger.cpp
    ../shared/precache_register.cpp
    ../shared/predictableid.cpp
    prediction.cpp
    ../shared/predictioncopy.cpp
    ../shared/props_shared.cpp
    proxyentity.cpp
    ProxyHealth.cpp
    proxyplayer.cpp
    proxypupil.cpp
    ragdoll.cpp
    ../shared/ragdoll_shared.cpp
    ../../common/randoverride.cpp
    recvproxy.cpp
    ../../public/renamed_recvtable_compat.cpp
	rendertexture.cpp
	../shared/rope_helpers.cpp
	../../public/rope_physics.cpp
	../shared/saverestore.cpp
	../shared/sceneentity_shared.cpp
	../../public/scratchpad3d.cpp
	../../public/ScratchPadUtils.cpp
    ScreenSpaceEffects.cpp
    ../../public/sentence.cpp
    ../shared/sequence_Transitioner.cpp
    ../shared/sheetsimulator.cpp
    simple_keys.cpp
    ../../public/simple_physics.cpp
    ../shared/simtimer.cpp
    ../shared/singleplay_gamerules.cpp
    ../shared/SoundEmitterSystem.cpp
    ../shared/soundenvelope.cpp
    ../../public/SoundParametersInternal.cpp
    splinepatch.cpp
    ../shared/Sprite.cpp
    spritemodel.cpp
    ../shared/SpriteTrail.cpp
    ../../public/stringregistry.cpp
	../../public/studio.cpp
	../shared/studio_shared.cpp
	studio_stats.cpp
	../shared/takedamageinfo.cpp
	../shared/teamplay_gamerules.cpp
	../shared/teamplayroundbased_gamerules.cpp
	../shared/test_ehandle.cpp
	text_message.cpp
	texturescrollmaterialproxy.cpp
	timematerialproxy.cpp
	toggletextureproxy.cpp
	train.cpp
	../shared/usercmd.cpp
	../shared/usermessages.cpp
	../shared/util_shared.cpp
	../../public/vallocator.cpp
    ../shared/vehicle_viewblend_shared.cpp
    vgui_avatarimage.cpp
    vgui_basepanel.cpp
    vgui_bitmapbutton.cpp
    vgui_bitmapimage.cpp
    vgui_bitmappanel.cpp
    vgui_centerstringpanel.cpp
    vgui_consolepanel.cpp
    ../../public/vgui_controls/vgui_controls.cpp
	vgui_debugoverlaypanel.cpp
	vgui_fpspanel.cpp
	vgui_game_viewport.cpp
	vgui_grid.cpp
	vgui_int.cpp
	vgui_loadingdiscpanel.cpp
	vgui_messagechars.cpp
	vgui_netgraphpanel.cpp
	vgui_schemevisualizer.cpp
	vgui_slideshow_display_screen.cpp
	vgui_video.cpp
	vgui_video_player.cpp
	view.cpp
	view_beams.cpp
	view_effects.cpp
	view_scene.cpp
	viewangleanim.cpp
	ViewConeImage.cpp
	viewdebug.cpp
	viewpostprocess.cpp
	viewrender.cpp
	../shared/voice_banmgr.cpp
	../shared/voice_status.cpp
	warp_overlay.cpp
	WaterLODMaterialProxy.cpp
	../shared/weapon_parse.cpp
	../shared/weapon_parse_default.cpp
	weapon_selection.cpp
	weapons_resource.cpp
	WorldDimsProxy.cpp
	game_controls/basemodel_panel.cpp
	game_controls/basemodelpanel.cpp
	game_controls/baseviewport.cpp
	game_controls/ClientScoreBoardDialog.cpp
	game_controls/commandmenu.cpp
	game_controls/IconPanel.cpp
	game_controls/intromenu.cpp
	game_controls/MapOverview.cpp
	game_controls/NavProgress.cpp
	game_controls/SpectatorGUI.cpp
	game_controls/teammenu.cpp
	game_controls/vguitextwindow.cpp
	../shared/episodic/achievements_ep1.cpp
	../shared/episodic/achievements_ep2.cpp
	../shared/episodic/achievements_epx.cpp
	../shared/hl2/basehlcombatweapon_shared.cpp
	hl2/c_antlion_dust.cpp
	hl2/c_ar2_explosion.cpp
	hl2/c_barnacle.cpp
	hl2/c_barney.cpp
	hl2/c_basehelicopter.cpp
	hl2/c_basehlcombatweapon.cpp
	hl2/c_basehlplayer.cpp
	hl2/c_citadel_effects.cpp
	hl2/c_corpse.cpp
	hl2/c_env_alyxtemp.cpp
	hl2/c_env_headcrabcanister.cpp
	hl2/c_env_starfield.cpp
	hl2/c_func_tankmortar.cpp
	hl2/c_hl2_playerlocaldata.cpp
	hl2/c_info_teleporter_countdown.cpp
	episodic/c_npc_advisor.cpp
	hl2/c_npc_antlionguard.cpp
	hl2/c_npc_combinegunship.cpp
	hl2/c_npc_manhack.cpp
	episodic/c_npc_puppet.cpp
	hl2/c_npc_rollermine.cpp
	hl2/c_plasma_beam_node.cpp
	hl2/c_prop_combine_ball.cpp
	episodic/c_prop_scalable.cpp
	hl2/c_rotorwash.cpp
	hl2/c_script_intro.cpp
	hl2/c_strider.cpp
	hl2/c_te_concussiveexplosion.cpp
	hl2/c_te_flare.cpp
	hl2/c_thumper_dust.cpp
	hl2/c_vehicle_airboat.cpp
	hl2/c_vehicle_cannon.cpp
	hl2/c_vehicle_crane.cpp
	episodic/c_vehicle_jeep_episodic.cpp
	hl2/c_vehicle_prisoner_pod.cpp
	episodic/c_vort_charge_token.cpp
	hl2/c_weapon__stubs_hl2.cpp
	hl2/c_weapon_crossbow.cpp
	episodic/c_weapon_hopwire.cpp
	hl2/c_weapon_physcannon.cpp
	hl2/c_weapon_stunstick.cpp
	hl2/clientmode_hlnormal.cpp
	death.cpp
	../shared/hl2/env_headcrabcanister_shared.cpp
	episodic/episodic_screenspaceeffects.cpp
	episodic/flesh_internal_material_proxy.cpp
	hl2/fx_antlion.cpp
	hl2/fx_bugbait.cpp
	hl2/fx_hl2_impacts.cpp
	hl2/fx_hl2_tracers.cpp
	hl2/hl2_clientmode.cpp
	../shared/hl2/hl2_gamerules.cpp
	../shared/hl2/hl2_usermessages.cpp
	../shared/hl2/hl_gamemovement.cpp
	hl2/hl_in_main.cpp
	hl2/hl_prediction.cpp
	hl2/hud_ammo.cpp
	hl2/hud_battery.cpp
	hl2/hud_blood.cpp
	hl2/hud_credits.cpp
	hl2/hud_damageindicator.cpp
	hl2/hud_flashlight.cpp
	hl2/hud_health.cpp
	hl2/hud_locator.cpp
	hl2/hud_poisondamageindicator.cpp
	hud_posture.cpp
	hl2/hud_quickinfo.cpp
	hl2/hud_radar.cpp
	hud_squadstatus.cpp
	hl2/hud_suitpower.cpp
	hl2/hud_weaponselection.cpp
	hl2/hud_zoom.cpp
	../shared/script_intro_shared.cpp
	hl2/shieldproxy.cpp
	../shared/hl2/survival_gamerules.cpp
	hl2/vgui_rootpanel_hl2.cpp
	
	stdafx.cpp

	sixense/in_sixense.cpp
	sixense/in_sixense_gesture_bindings.cpp
	../shared/sixense/sixense_convars.cpp

	c_basetempentity.cpp
	c_effects.cpp
	c_impact_effects.cpp
	c_movie_explosion.cpp
	c_particle_fire.cpp
	c_particle_smokegrenade.cpp
	c_prop_vehicle.cpp
	c_recipientfilter.cpp
	c_smoke_trail.cpp
	c_smokestack.cpp
	c_steamjet.cpp
	c_stickybolt.cpp
	c_te.cpp
	c_te_armorricochet.cpp
	c_te_basebeam.cpp
	c_te_beamentpoint.cpp
	c_te_beaments.cpp
	c_te_beamfollow.cpp
	c_te_beamlaser.cpp
	c_te_beampoints.cpp
	c_te_beamring.cpp
	c_te_beamringpoint.cpp
	c_te_beamspline.cpp
	c_te_bloodsprite.cpp
	c_te_bloodstream.cpp
	c_te_breakmodel.cpp
	c_te_bspdecal.cpp
	c_te_bubbles.cpp
	c_te_bubbletrail.cpp
	c_te_clientprojectile.cpp
	c_te_decal.cpp
	c_te_dynamiclight.cpp
	c_te_effect_dispatch.cpp
	c_te_energysplash.cpp
	c_te_explosion.cpp
	c_te_fizz.cpp
	c_te_footprint.cpp
	c_te_glassshatter.cpp
	c_te_glowsprite.cpp
	c_te_impact.cpp
	c_te_killplayerattachments.cpp
	c_te_largefunnel.cpp
	c_te_legacytempents.cpp
	c_te_muzzleflash.cpp
	c_te_particlesystem.cpp
	c_te_physicsprop.cpp
	c_te_playerdecal.cpp
	c_te_projecteddecal.cpp
	c_te_showline.cpp
	c_te_smoke.cpp
	c_te_sparks.cpp
	c_te_sprite.cpp
	c_te_spritespray.cpp
	c_te_worlddecal.cpp
	c_testtraceline.cpp
	c_tracer.cpp
	fx.cpp
	fx_discreetline.cpp
	fx_envelope.cpp
	fx_line.cpp
	fx_sparks.cpp
	particlesphererenderer.cpp
	smoke_fog_overlay.cpp
	../../public/tools/bonelist.cpp
	entity_client_tools.cpp
	toolframework_client.cpp
)

target_link_libraries(client 
	tier1

	tier0
	tier2
	tier3
	mathlib
	dmxloader
	particles
	vgui_controls
	matsys_controls
	vtf
	vstdlib
	steam_api
	choreoobjects
	bitmap
)

# Need to get rid on this later!
target_link_libraries(client 
	libprotobuf
)

install(
	TARGETS client 
	RUNTIME
	DESTINATION blamod/bin
)